--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <h1><u>Animal Jokes</u></h1>
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="A laughing lion" title="Animal Jokes">
   </body>
 </html>
